Removed Amplify from version control

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 A_Butterfly_Quest_UnityFile/Assets/Packages/AmplifyShaderEditor/
+A_Butterfly_Quest_UnityFile/Assets/AmplifyShaderEditor/
+A_Butterfly_Quest_UnityFile/Assets/AmplifyShaderEditor.meta
