Update Anim blending V3

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 A_Butterfly_Quest_UnityFile/Assets/Packages/AmplifyShaderEditor/
 A_Butterfly_Quest_UnityFile/Assets/AmplifyShaderEditor/
 A_Butterfly_Quest_UnityFile/Assets/AmplifyShaderEditor.meta
+A_Butterfly_Quest_UnityFile/Assets/Packages/AmplifyShaderEditor.meta
