--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ A_Butterfly_Quest_UnityFile/Assets/Packages/AmplifyShaderEditor/
 A_Butterfly_Quest_UnityFile/Assets/AmplifyShaderEditor/
 A_Butterfly_Quest_UnityFile/Assets/AmplifyShaderEditor.meta
 A_Butterfly_Quest_UnityFile/Assets/Packages/AmplifyShaderEditor.meta
+A_Butterfly_Quest_UnityFile/Assets/Art/Materials/FX.meta
+A_Butterfly_Quest_UnityFile/Assets/Tech/Shaders.meta
