Obj exporter push

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ A_Butterfly_Quest_UnityFile/Assets/AmplifyShaderEditor.meta
 A_Butterfly_Quest_UnityFile/Assets/Packages/AmplifyShaderEditor.meta
 A_Butterfly_Quest_UnityFile/Assets/Art/Materials/FX.meta
 A_Butterfly_Quest_UnityFile/Assets/Tech/Shaders.meta
+A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources/Sky and Fog Settings Profile.asset.meta
+A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources/DefaultSceneRoot.prefab.meta
+A_Butterfly_Quest_UnityFile/ProjectSettings/HDRPProjectSettings.asset
+A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources/Sky and Fog Settings Profile.asset
+A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources/DefaultSceneRoot.prefab
+A_Butterfly_Quest_UnityFile/testtttt
+A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources.meta
