--- a/A_Butterfly_Quest_UnityFile/Packages/manifest.json
+++ b/A_Butterfly_Quest_UnityFile/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.probuilder": "4.4.0",
     "com.unity.render-pipelines.high-definition": "7.5.2",
+    "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.20",
     "com.unity.textmeshpro": "2.1.1",
     "com.unity.timeline": "1.2.17",
