Retake LD 2nd part / ptit start d'habillage

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources/Sky and Fog Settings Pro
 A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources/DefaultSceneRoot.prefab
 A_Butterfly_Quest_UnityFile/testtttt
 A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources.meta
+A_Butterfly_Quest_UnityFile/Assets/Tree_Textures.meta
