--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/NewBrush 1.brush
 A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/NewBrush 1.brush.meta
 A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/NewBrush 2.brush
 A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/NewBrush 2.brush.meta
+A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/3C_Scene.unity
+A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/3C_Scene.unity.meta
