Update scene environment

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,24 @@ A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources/DefaultSceneRoot.prefab
 A_Butterfly_Quest_UnityFile/testtttt
 A_Butterfly_Quest_UnityFile/Assets/HDRPDefaultResources.meta
 A_Butterfly_Quest_UnityFile/Assets/Tree_Textures.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/CHANGELOG.md
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/CHANGELOG.md.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/LICENSE.md
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/LICENSE.md.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/package.json
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/package.json.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Runtime.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Tests.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Documentation~/index.md
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Runtime/ShaderConfig.cs
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Runtime/ShaderConfig.cs.hlsl
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Runtime/ShaderConfig.cs.hlsl.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Runtime/ShaderConfig.cs.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Runtime/Unity.RenderPipelines.HighDefinition.Config.Runtime.asmdef
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Runtime/Unity.RenderPipelines.HighDefinition.Config.Runtime.asmdef.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Tests/.tests.json
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Tests/Editor.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Tests/Editor/ConfigurationTest.cs
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Tests/Editor/ConfigurationTest.cs.meta
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Tests/Editor/Unity.RenderPipelines.HighDefinitionConfig.Editor.Tests.asmdef
+A_Butterfly_Quest_UnityFile/LocalPackages/com.unity.render-pipelines.high-definition-config/Tests/Editor/Unity.RenderPipelines.HighDefinitionConfig.Editor.Tests.asmdef.meta
