--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,25 @@ A_Butterfly_Quest_UnityFile/Recordings/movie_0322021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Recordings/movie_0332021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Recordings/movie_0342021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Recordings/movie_0352021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0362021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0372021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0382021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0392021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0402021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0412021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0422021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0432021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0442021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0452021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0462021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0472021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0482021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0492021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0502021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0512021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0522021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0532021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0542021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0552021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0562021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Recordings/movie_0572021-06-212021-06-21.mp4
