--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ A_Butterfly_Quest_UnityFile/Recordings/movie_0542021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Recordings/movie_0552021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Recordings/movie_0562021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Recordings/movie_0572021-06-212021-06-21.mp4
+A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/LD/NavMesh.asset
+A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/LD/NavMesh.asset.meta
