--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ A_Butterfly_Quest_UnityFile/Recordings/movie_0562021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Recordings/movie_0572021-06-212021-06-21.mp4
 A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/LD/NavMesh.asset
 A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/LD/NavMesh.asset.meta
+A_Butterfly_Quest_UnityFile/Assets/Tech/Sound/Papillon/9convert.com - 1 hour of Ambient Fantasy Music  Tranquil Atmospheric Ambience  Enchanted Lands.mp3
+A_Butterfly_Quest_UnityFile/Assets/Tech/Sound/Papillon/9convert.com - 1 hour of Ambient Fantasy Music  Tranquil Atmospheric Ambience  Enchanted Lands.mp3.meta
