me faite plus cher avec le sound design

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/LD/NavMesh.asset
 A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/LD/NavMesh.asset.meta
 A_Butterfly_Quest_UnityFile/Assets/Tech/Sound/Papillon/9convert.com - 1 hour of Ambient Fantasy Music  Tranquil Atmospheric Ambience  Enchanted Lands.mp3
 A_Butterfly_Quest_UnityFile/Assets/Tech/Sound/Papillon/9convert.com - 1 hour of Ambient Fantasy Music  Tranquil Atmospheric Ambience  Enchanted Lands.mp3.meta
+A_Butterfly_Quest_UnityFile/Assets/Tech/Scenes/LD.meta
+A_Butterfly_Quest_UnityFile/Assets/Tech/Sound/SonNuit.mp3
+A_Butterfly_Quest_UnityFile/Assets/Tech/Sound/SonNuit.mp3.meta
+A_Butterfly_Quest_UnityFile/Assets/Tech/Menus/Sounds/MusiquedeFond.mp3.meta
